k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: small-squaretable
  labels:
    app: small-squaretable
    environment: production
